--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,7 @@ body {
     color: #333;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
 }
 
@@ -24,6 +22,7 @@ body {
     width: 100%;
     max-width: 400px;
     text-align: center;
+    margin: auto;
 }
 
 h1 {
@@ -95,14 +94,12 @@ button:hover {
 
 /* Estilo para el pie de página */
 footer {
-    margin-top: 20px;
-    text-align: center;
-    padding: 10px;
     background-color: #2c3e50;
     color: white;
+    text-align: center;
+    padding: 50px;
+    margin-top: auto;
     width: 100%;
-    position: absolute;
-    bottom: 0;
 }
 
 footer p {
